added word2vec features

--- a/Feature_Design/word2vec.ipynb
+++ b/Feature_Design/word2vec.ipynb
@@ -3,12 +3,534 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c522d1f",
+   "id": "582fe52b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://medium.com/@black_swan/how-to-train-word2vec-and-fasttext-embedding-on-wikipedia-corpus-9e8ac45a0c0a"
+    "# https://medium.com/@black_swan/how-to-train-word2vec-and-fasttext-embedding-on-wikipedia-corpus-9e8ac45a0c0a\n",
+    "# https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93dd9755",
+   "metadata": {},
+   "source": [
+    "Preprocess -- corpus needs to be in:\n",
+    "https://radimrehurek.com/gensim/models/word2vec.html#gensim.models.word2vec.LineSentence\n",
+    "\n",
+    "format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa9328e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import praw\n",
+    "import re\n",
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "322cd9bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../Data/wsb_cleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb334bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regex = re.compile('[^a-zA-Z ]')\n",
+    "for col in ['title', 'author', 'selftext']:\n",
+    "    df[col] = df[col].apply(lambda x : regex.sub('', str(x) ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c821d59c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                   Good time to get on BLUE\n",
+       "1          i wanna buy a call but i dont want to bet too ...\n",
+       "2                                               Buy INTU  DD\n",
+       "3          If you thought your  was bad at least you aren...\n",
+       "4                                            I will remember\n",
+       "                                 ...                        \n",
+       "1260232                        ASO technical breakout and DD\n",
+       "1260233                                   First YOLO on CRSR\n",
+       "1260234                                      Rkt to the moon\n",
+       "1260235    My therapist told me Im delusional for thinkin...\n",
+       "1260236    CCIV  Lucid motors testing their FSD in Fremon...\n",
+       "Name: title, Length: 1260237, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "17095bd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\lnajt\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "100adc3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim.models\n",
+    "\n",
+    "\n",
+    "text = df['title']\n",
+    "#sentences = [nltk.word_tokenize(sent) for sent in nltk.sent_tokenize(text)]\n",
+    "sentences = [x.split(' ') for x in text]\n",
+    "model = gensim.models.Word2Vec(sentences = sentences,  min_count=10, vector_size=20, epochs = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3a5896bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word #0/29759 is \n",
+      "word #1/29759 is the\n",
+      "word #2/29759 is to\n",
+      "word #3/29759 is I\n",
+      "word #4/29759 is a\n",
+      "word #5/29759 is and\n",
+      "word #6/29759 is GME\n",
+      "word #7/29759 is is\n",
+      "word #8/29759 is on\n",
+      "word #9/29759 is of\n",
+      "word #10/29759 is in\n",
+      "word #11/29759 is for\n",
+      "word #12/29759 is this\n",
+      "word #13/29759 is you\n",
+      "word #14/29759 is my\n",
+      "word #15/29759 is it\n",
+      "word #16/29759 is AMC\n",
+      "word #17/29759 is are\n",
+      "word #18/29759 is with\n",
+      "word #19/29759 is THE\n",
+      "word #20/29759 is buy\n",
+      "word #21/29759 is all\n",
+      "word #22/29759 is at\n",
+      "word #23/29759 is we\n",
+      "word #24/29759 is up\n",
+      "word #25/29759 is Im\n",
+      "word #26/29759 is The\n",
+      "word #27/29759 is me\n",
+      "word #28/29759 is be\n",
+      "word #29/29759 is but\n",
+      "word #30/29759 is that\n",
+      "word #31/29759 is Robinhood\n",
+      "word #32/29759 is not\n",
+      "word #33/29759 is stock\n",
+      "word #34/29759 is from\n",
+      "word #35/29759 is have\n",
+      "word #36/29759 is do\n",
+      "word #37/29759 is TO\n",
+      "word #38/29759 is like\n",
+      "word #39/29759 is just\n",
+      "word #40/29759 is now\n",
+      "word #41/29759 is will\n",
+      "word #42/29759 is about\n",
+      "word #43/29759 is can\n",
+      "word #44/29759 is What\n",
+      "word #45/29759 is HOLD\n",
+      "word #46/29759 is moon\n",
+      "word #47/29759 is what\n",
+      "word #48/29759 is or\n",
+      "word #49/29759 is out\n",
+      "word #50/29759 is get\n",
+      "word #51/29759 is your\n",
+      "word #52/29759 is going\n",
+      "word #53/29759 is go\n",
+      "word #54/29759 is today\n",
+      "word #55/29759 is This\n",
+      "word #56/29759 is WSB\n",
+      "word #57/29759 is more\n",
+      "word #58/29759 is shares\n",
+      "word #59/29759 is its\n",
+      "word #60/29759 is NOK\n",
+      "word #61/29759 is BB\n",
+      "word #62/29759 is they\n",
+      "word #63/29759 is market\n",
+      "word #64/29759 is k\n",
+      "word #65/29759 is A\n",
+      "word #66/29759 is here\n",
+      "word #67/29759 is money\n",
+      "word #68/29759 is stocks\n",
+      "word #69/29759 is How\n",
+      "word #70/29759 is so\n",
+      "word #71/29759 is as\n",
+      "word #72/29759 is BUY\n",
+      "word #73/29759 is us\n",
+      "word #74/29759 is if\n",
+      "word #75/29759 is next\n",
+      "word #76/29759 is was\n",
+      "word #77/29759 is We\n",
+      "word #78/29759 is time\n",
+      "word #79/29759 is Is\n",
+      "word #80/29759 is some\n",
+      "word #81/29759 is one\n",
+      "word #82/29759 is has\n",
+      "word #83/29759 is down\n",
+      "word #84/29759 is short\n",
+      "word #85/29759 is by\n",
+      "word #86/29759 is still\n",
+      "word #87/29759 is guys\n",
+      "word #88/29759 is sell\n",
+      "word #89/29759 is new\n",
+      "word #90/29759 is know\n",
+      "word #91/29759 is dont\n",
+      "word #92/29759 is trading\n",
+      "word #93/29759 is buying\n",
+      "word #94/29759 is hold\n",
+      "word #95/29759 is an\n",
+      "word #96/29759 is MOON\n",
+      "word #97/29759 is into\n",
+      "word #98/29759 is how\n",
+      "word #99/29759 is when\n",
+      "word #100/29759 is right\n",
+      "word #101/29759 is holding\n",
+      "word #102/29759 is Lets\n",
+      "word #103/29759 is make\n",
+      "word #104/29759 is Just\n",
+      "word #105/29759 is My\n",
+      "word #106/29759 is think\n",
+      "word #107/29759 is bought\n",
+      "word #108/29759 is only\n",
+      "word #109/29759 is Why\n",
+      "word #110/29759 is back\n",
+      "word #111/29759 is AND\n",
+      "word #112/29759 is Buy\n",
+      "word #113/29759 is their\n",
+      "word #114/29759 is You\n",
+      "word #115/29759 is should\n",
+      "word #116/29759 is after\n",
+      "word #117/29759 is week\n",
+      "word #118/29759 is If\n",
+      "word #119/29759 is IS\n",
+      "word #120/29759 is good\n",
+      "word #121/29759 is Its\n",
+      "word #122/29759 is got\n",
+      "word #123/29759 is WE\n",
+      "word #124/29759 is calls\n",
+      "word #125/29759 is day\n",
+      "word #126/29759 is am\n",
+      "word #127/29759 is our\n",
+      "word #128/29759 is Hold\n",
+      "word #129/29759 is no\n",
+      "word #130/29759 is To\n",
+      "word #131/29759 is much\n",
+      "word #132/29759 is over\n",
+      "word #133/29759 is RH\n",
+      "word #134/29759 is i\n",
+      "word #135/29759 is need\n",
+      "word #136/29759 is retards\n",
+      "word #137/29759 is tomorrow\n",
+      "word #138/29759 is people\n",
+      "word #139/29759 is them\n",
+      "word #140/29759 is Can\n",
+      "word #141/29759 is help\n",
+      "word #142/29759 is DD\n",
+      "word #143/29759 is who\n",
+      "word #144/29759 is been\n",
+      "word #145/29759 is these\n",
+      "word #146/29759 is want\n",
+      "word #147/29759 is see\n",
+      "word #148/29759 is options\n",
+      "word #149/29759 is squeeze\n",
+      "word #150/29759 is too\n",
+      "word #151/29759 is YOU\n",
+      "word #152/29759 is price\n",
+      "word #153/29759 is why\n",
+      "word #154/29759 is Dont\n",
+      "word #155/29759 is way\n",
+      "word #156/29759 is there\n",
+      "word #157/29759 is doing\n",
+      "word #158/29759 is GameStop\n",
+      "word #159/29759 is off\n",
+      "word #160/29759 is New\n",
+      "word #161/29759 is PLTR\n",
+      "word #162/29759 is dip\n",
+      "word #163/29759 is ON\n",
+      "word #164/29759 is before\n",
+      "word #165/29759 is THIS\n",
+      "word #166/29759 is again\n",
+      "word #167/29759 is made\n",
+      "word #168/29759 is cant\n",
+      "word #169/29759 is YOLO\n",
+      "word #170/29759 is share\n",
+      "word #171/29759 is TSLA\n",
+      "word #172/29759 is NOT\n",
+      "word #173/29759 is fucking\n",
+      "word #174/29759 is first\n",
+      "word #175/29759 is than\n",
+      "word #176/29759 is last\n",
+      "word #177/29759 is They\n",
+      "word #178/29759 is take\n",
+      "word #179/29759 is When\n",
+      "word #180/29759 is did\n",
+      "word #181/29759 is So\n",
+      "word #182/29759 is puts\n",
+      "word #183/29759 is Short\n",
+      "word #184/29759 is selling\n",
+      "word #185/29759 is would\n",
+      "word #186/29759 is Whats\n",
+      "word #187/29759 is big\n",
+      "word #188/29759 is account\n",
+      "word #189/29759 is US\n",
+      "word #190/29759 is boys\n",
+      "word #191/29759 is any\n",
+      "word #192/29759 is It\n",
+      "word #193/29759 is SNDL\n",
+      "word #194/29759 is hands\n",
+      "word #195/29759 is IN\n",
+      "word #196/29759 is Not\n",
+      "word #197/29759 is anyone\n",
+      "word #198/29759 is Stock\n",
+      "word #199/29759 is tendies\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, word in enumerate(model.wv.index_to_key):\n",
+    "    if index == 200:\n",
+    "        break\n",
+    "    print(f\"word #{index}/{len(model.wv.index_to_key)} is {word}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "76b5b7df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1c8313ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c0644e1b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"AMC\"\t- similarity: 0.915942\n",
+      "\n",
+      "\"shares\"\t- similarity: 0.835391\n",
+      "\n",
+      "\"gme\"\t- similarity: 0.802144\n",
+      "\n",
+      "\"amc\"\t- similarity: 0.801782\n",
+      "\n",
+      "\"dip\"\t- similarity: 0.778836\n",
+      "\n",
+      "\"everything\"\t- similarity: 0.759182\n",
+      "\n",
+      "\"puts\"\t- similarity: 0.756371\n",
+      "\n",
+      "\"calls\"\t- similarity: 0.753323\n",
+      "\n",
+      "\"today\"\t- similarity: 0.750671\n",
+      "\n",
+      "\"yesterday\"\t- similarity: 0.749364\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, sim in model.wv.most_similar(positive=['GME'], negative=[]):\n",
+    "    print('\\\"%s\\\"\\t- similarity: %g' % (word, sim))\n",
+    "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6514730",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4471f75e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Saving and loading\n",
+    "\n",
+    "import tempfile\n",
+    "\n",
+    "with tempfile.NamedTemporaryFile(prefix='gensim-model-', delete=False) as tmp:\n",
+    "    temporary_filepath = tmp.name\n",
+    "    model.save(temporary_filepath)\n",
+    "    #\n",
+    "    # The model is now safely stored in the filepath.\n",
+    "    # You can copy it to other machines, share it with others, etc.\n",
+    "    #\n",
+    "    # To load a saved model:\n",
+    "    #\n",
+    "    new_model = gensim.models.Word2Vec.load(temporary_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e271529",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d55aa587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import IncrementalPCA    # inital reduction\n",
+    "from sklearn.manifold import TSNE                   # final reduction\n",
+    "import numpy as np                                  # array handling\n",
+    "\n",
+    "\n",
+    "def reduce_dimensions(model):\n",
+    "    num_dimensions = 2  # final num dimensions (2D, 3D, etc)\n",
+    "\n",
+    "    # extract the words & their vectors, as numpy arrays\n",
+    "    vectors = np.asarray(model.wv.vectors)\n",
+    "    labels = np.asarray(model.wv.index_to_key)  # fixed-width numpy strings\n",
+    "\n",
+    "    # reduce using t-SNE\n",
+    "    tsne = TSNE(n_components=num_dimensions, random_state=0)\n",
+    "    vectors = tsne.fit_transform(vectors)\n",
+    "\n",
+    "    x_vals = [v[0] for v in vectors]\n",
+    "    y_vals = [v[1] for v in vectors]\n",
+    "    return x_vals, y_vals, labels\n",
+    "\n",
+    "\n",
+    "x_vals, y_vals, labels = reduce_dimensions(model)\n",
+    "\n",
+    "def plot_with_plotly(x_vals, y_vals, labels, plot_in_notebook=True):\n",
+    "    from plotly.offline import init_notebook_mode, iplot, plot\n",
+    "    import plotly.graph_objs as go\n",
+    "\n",
+    "    trace = go.Scatter(x=x_vals, y=y_vals, mode='text', text=labels)\n",
+    "    data = [trace]\n",
+    "\n",
+    "    if plot_in_notebook:\n",
+    "        init_notebook_mode(connected=True)\n",
+    "        iplot(data, filename='word-embedding-plot')\n",
+    "    else:\n",
+    "        plot(data, filename='word-embedding-plot.html')\n",
+    "\n",
+    "\n",
+    "def plot_with_matplotlib(x_vals, y_vals, labels):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import random\n",
+    "\n",
+    "    random.seed(0)\n",
+    "\n",
+    "    plt.figure(figsize=(12, 12))\n",
+    "    plt.scatter(x_vals, y_vals)\n",
+    "\n",
+    "    #\n",
+    "    # Label randomly subsampled 25 data points\n",
+    "    #\n",
+    "    indices = list(range(len(labels)))\n",
+    "    selected_indices = random.sample(indices, 25)\n",
+    "    for i in selected_indices:\n",
+    "        plt.annotate(labels[i], (x_vals[i], y_vals[i]))\n",
+    "\n",
+    "try:\n",
+    "    get_ipython()\n",
+    "except Exception:\n",
+    "    plot_function = plot_with_matplotlib\n",
+    "else:\n",
+    "    plot_function = plot_with_plotly\n",
+    "\n",
+    "plot_function(x_vals, y_vals, labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c5e27a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
