implemented popularity calculation

--- a/Feature_Design/gpt.ipynb
+++ b/Feature_Design/gpt.ipynb
@@ -11,6 +11,34 @@
     "\n",
     "    https://gmihaila.github.io/tutorial_notebooks/gpt2_finetune_classification/#complete-tutorial-on-how-to-use-gpt2-for-text-classification"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4b82a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://medium.com/ai-innovation/beginners-guide-to-retrain-gpt-2-117m-to-generate-custom-text-content-8bb5363d8b7f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdcd8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ideas:\n",
+    "    \n",
+    "    1. Use huggingface to predict duds, use this as a feature\n",
+    "    2.\n",
+    "    \n",
+    "Resources:\n",
+    "    \n",
+    "    https://jalammar.github.io/illustrated-gpt2/\n",
+    "        https://jalammar.github.io/illustrated-transformer/"
+   ]
   }
  ],
  "metadata": {
