--- a/Feature_Design/word2vec.ipynb
+++ b/Feature_Design/word2vec.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04760c5a",
+   "id": "f3577b32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7c70cc",
+   "id": "a0bba067",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "5ef17056",
+   "id": "e5c33775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "2444416c",
+   "id": "12a7b628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c46dfc",
+   "id": "d6ad990b",
    "metadata": {},
    "source": [
     "Preprocessing:\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "836f2f2a",
+   "id": "40342cde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "0a41e140",
+   "id": "16ac6bcb",
    "metadata": {
     "scrolled": true
    },
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "9b21232d",
+   "id": "868ee510",
    "metadata": {
     "scrolled": true
    },
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "59a01ec2",
+   "id": "beb1a862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "c9c84189",
+   "id": "ca2cd0e4",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38e6ba6",
+   "id": "993f22cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1349573",
+   "id": "4171bb28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "abeafc77",
+   "id": "7c37e4ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "ef60439e",
+   "id": "f6c1bf73",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "72839aec",
+   "id": "f70b86d6",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "5fc38945",
+   "id": "335e4ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "id": "a50d2a0c",
+   "id": "dfbd2ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "df81818f",
+   "id": "860917f6",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "176f2980",
+   "id": "4adf2764",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "9fbb0c5a",
+   "id": "dc2408af",
    "metadata": {
     "scrolled": true
    },
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "bc7f6dd7",
+   "id": "f7f3504a",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "71438152",
+   "id": "f7d926b4",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "d06ce7ff",
+   "id": "7b8fbed6",
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "id": "e76b957c",
+   "id": "ee5683aa",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "25d94cf7",
+   "id": "a5a5b1d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2dd0ef8",
+   "id": "8d500d67",
    "metadata": {},
    "source": [
     "Some preliminary regression /classification below -- this is slated to get moved"
@@ -1473,8 +1473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "e0614c22",
+   "execution_count": 317,
+   "id": "9e7c8ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,10 +1487,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "73ee7a8b",
+   "execution_count": 318,
+   "id": "48286698",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-318-beef60ef4550>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'avg_vector'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0maverage_vector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\Erdos_Institute\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mapply\u001b[1;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[0;32m   4136\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4137\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4138\u001b[1;33m                 \u001b[0mmapped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4139\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4140\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-318-beef60ef4550>\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'avg_vector'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0maverage_vector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-317-9bc123431b15>\u001b[0m in \u001b[0;36maverage_vector\u001b[1;34m(text, model)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0maverage_vector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mpresent_keys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtext\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkey_to_index\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpresent_keys\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex_to_key\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpresent_keys\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpresent_keys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "df['avg_vector'] = df['title'].apply(lambda x : average_vector(x, model))"
    ]
@@ -1498,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "c7349557",
+   "id": "750fe689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "68854867",
+   "id": "157bdfda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f499978",
+   "id": "2086ae51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1534,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "b393a3bd",
+   "id": "768474cd",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28bc7e65",
+   "id": "35f27733",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1923,7 +1939,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "ccc6a4dd",
+   "id": "178edede",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1934,7 +1950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2508c10",
+   "id": "fb48a4cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1942,7 +1958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda1ceb9",
+   "id": "b52d874c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1950,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb72d85",
+   "id": "b646c799",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1958,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "81deecac",
+   "id": "99c7993b",
    "metadata": {
     "scrolled": true
    },
@@ -1971,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "da0f2101",
+   "id": "1d42b00e",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2020,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "c3bfa2b2",
+   "id": "ef7dbb2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "d904febc",
+   "id": "c96db59a",
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "228e9bed",
+   "id": "f7431c89",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "2322fb72",
+   "id": "7f1698fb",
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2125,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f2d8f0d3",
+   "id": "ae8c1b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "e1b9aeab",
+   "id": "5ac3ed9e",
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "dc39f3d6",
+   "id": "f1e90d5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2165,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "a372e7b3",
+   "id": "5a44b8f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,7 +2191,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "51268869",
+   "id": "28852c49",
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2641,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "df9e1d04",
+   "id": "3f096a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2635,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "cfb0597d",
+   "id": "b79ad43a",
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2684,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "75c0abba",
+   "id": "567e193d",
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d89490",
+   "id": "eb4ae1cd",
    "metadata": {},
    "outputs": [],
    "source": []
