--- a/Feature_Design/word2vec.ipynb
+++ b/Feature_Design/word2vec.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "504e241b",
+   "id": "59f71f6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d97190b",
+   "id": "67e47e67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "6b99b8ad",
+   "id": "5a6ffab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "6e57a23d",
    "metadata": {},
    "outputs": [],
@@ -653,10 +653,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "49ed28d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nok - similarity 0.5628875494003296\n",
+      "amc - similarity 0.5547893643379211\n",
+      "gamestop - similarity 0.5469179749488831\n",
+      "gmeamc - similarity 0.5361574292182922\n",
+      "bb - similarity 0.5265468955039978\n",
+      "cashapp - similarity 0.522383987903595\n",
+      "pltr - similarity 0.48038598895072937\n",
+      "shares - similarity 0.46201810240745544\n",
+      "gmc - similarity 0.4483102560043335\n",
+      "tsla - similarity 0.43883076310157776\n"
+     ]
+    }
+   ],
    "source": [
     "sims(args = {'positive': ['gme'], 'negative' : []} , model = model)"
    ]
@@ -895,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "75207134",
+   "id": "6ab874bb",
    "metadata": {},
    "outputs": [
     {
