added word2vec transformer

--- a/Feature_Design/word2vec.ipynb
+++ b/Feature_Design/word2vec.ipynb
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "a7d17169",
+   "id": "aa123265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c28eed3",
+   "id": "9b980f86",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,23 +537,13 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "9cfeead1",
+   "id": "45b88022",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['tokenized_title'] = df.title.apply(tokenize)\n",
-    "#df['tokenized_selftext'] = df.selftext.apply(tokenize)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "id": "af8bc97b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "#df['tokenized_selftext'] = df.selftext.apply(tokenize)\n",
+    "\n",
     "def train_w2v(tokenized_text):\n",
     "    # the train dataframe ot build the w2v model on\n",
     "    \n",
@@ -572,6 +562,16 @@
     "    #df.concat(axis = 1, X)\n",
     "    return X"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "af8bc97b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "3fa2d622",
+   "id": "35cb4ee5",
    "metadata": {},
    "outputs": [
     {
