--- a/Feature_Design/author_popularity.ipynb
+++ b/Feature_Design/author_popularity.ipynb
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cfe5cf2",
+   "id": "36a66357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee645890",
+   "id": "6627147f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc54948a",
+   "id": "31d219fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6fbe63b2",
+   "id": "551c38b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "16c88f81",
+   "id": "648c9f89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2477aa28",
+   "id": "fbf5e8b4",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d34e137c",
+   "execution_count": 20,
+   "id": "c106f3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,30 +168,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6e4d4162",
+   "execution_count": 24,
+   "id": "2d8dc988",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46599.750483262724"
+       "count    482753.000000\n",
+       "mean         82.598436\n",
+       "std        1490.210493\n",
+       "min           0.000000\n",
+       "25%           1.000000\n",
+       "50%           1.000000\n",
+       "75%           1.500000\n",
+       "max      210591.000000\n",
+       "Name: (ups, mean), dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "convert_to_mean( powerlaw.fit (submissions_df.ups))"
+    "d[('ups', 'mean')].describe()\n",
+    "#convert_to_mean( powerlaw.fit (submissions_df.ups))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8a5c53bf",
+   "id": "0f089144",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +259,7 @@
     }
    ],
    "source": [
-    "pop_agg.__fit__(submissions_df)"
+    "pop_agg.fit(df)"
    ]
   },
   {
@@ -385,15 +393,34 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "sns.scatterplot( data = merged, x = \"popularity_aggregate\",y = 'ups')\n",
+    "# of course this is a bit circular, since we are using the upvotes to measure the popularity aggregate score...\n",
+    "# but this at least shows us that the behavior is kind of reasonable... whether or not its better than means or median or max idk..."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d44588ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'merged' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-c4ca814db687>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmerged\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmerged\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mauthor\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'DeepFuckingValue'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'merged' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "merged[merged.author == 'DeepFuckingValue']"
+   ]
   },
   {
    "cell_type": "code",
